Completed MVP for homework, to late to do any more tonight'

--- a/one_to_many_lab/templates/index.html
+++ b/one_to_many_lab/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-Hello World
+<h1>This is the Animals and Owners Home Page.</h1>
+<p> See our list of animals, by clicking the link below:</p>
+<a href="/animals">Animals</a>
 
 {% endblock %}
